Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1
-
Linux
-
3d095069cf2e2e349489bcf5faf92145320471fb (qt/qttools/5.12)
Description
Given the following QML code:
Text { //% "<a href=\"http://qt-project.org/\">Qt Project</a>" text: qsTrId("qt-project-url") }
The value assigned to the text property has the backslashes still present:
<a href=\"http://qt-project.org/\">Qt Project</a>
Removing the backslashes from the code results in the following parse error:
Unexpected character in meta string
lupdate warning: Message with id 'qt-project-url' has no source.
Attachments
Issue Links
- is required for
-
QTBUG-66431 lupdate interprets "\n" differently in C++ and QML translation comments
-
- Closed
-
For Gerrit Dashboard: QTBUG-40639 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
250982,7 | lupdate: Escape special characters when processing QML | 5.12 | qt/qttools | Status: MERGED | +2 | 0 |