lupdate: Escape special characters when processing QML

The transcode function is now in a parser tool class.
It is used by the cpp and qml parser.

Fixes: QTBUG-40639
Change-Id: I3c9c9d137669900642a077cf81a739bfc31be800
Reviewed-by: Kai Koehne <kai.koehne@qt.io>